[workspace]
members = [
    "helloworld",
]

[package]
name = "smart-contract-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
helloworld = { path = "helloworld" }

bitcoincore-rpc = "0.18.0"
bitcoin = { version = "0.31.0", features = ["serde", "rand"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
anyhow = "1.0.82"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
risc0-build = { version = "0.21.0" }

[dev-dependencies]
serial_test = "3.1.1"

[package.metadata.risc0]
methods = ["helloworld"]
